--- a/run-script.yml
+++ b/run-script.yml
@@ -1,25 +1,24 @@
 name: Daily Link Runner
 
 on:
+  workflow_dispatch:  # 👈 Enables the "Run workflow" button
   schedule:
-    - cron: '30 3 * * *'  # 9:00 AM IST = 3:30 UTC
-  workflow_dispatch:       # Allows manual triggering from Actions tab
+    - cron: '30 3 * * *'  # Runs every day at 9:00 AM IST
 
 jobs:
-  run-links:
+  run-script:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v2
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v2
         with:
-          python-version: '3.10'
+          python-version: '3.9'
 
-      - name: Install requests
+      - name: Install dependencies
         run: pip install requests
 
-      - name: Run script
+      - name: Run the Python script
         run: python open_links.py
